--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,3 @@
-<!-- app/views/comments/_comment.html.erb -->
 <div class="card mb-3">
   <div class="card-body">
     <p class="card-text"><%= comment.content %></p>
@@ -6,11 +5,23 @@
       Posted by <%= comment.user.email %> | Updated <%= time_ago_in_words(comment.updated_at) %> ago
     </p>
 
-    <% if user_signed_in? && comment.user_id == current_user.id %>
+    <% if user_signed_in? %>
       <div class="d-flex justify-content-end mt-3">
-        <%= link_to 'Edit', edit_message_comment_path(comment.message, comment), class: "btn btn-warning btn-sm me-2" %>
-        <%= link_to 'Delete', message_comment_path(comment.message, comment), method: :delete, data: { confirm: "Are you sure you want to delete this comment?" }, class: "btn btn-danger btn-sm" %>
+        <% if comment.likes.exists?(user: current_user) %>
+          <%= button_to 'Unlike', comment_like_path(comment), method: :delete, class: "btn btn-danger btn-sm me-2" %>
+        <% else %>
+          <%= button_to 'Like', comment_like_path(comment), method: :post, class: "btn btn-primary btn-sm me-2" %>
+        <% end %>
+
+        <% if comment.user_id == current_user.id %>
+          <%= link_to 'Edit', edit_message_comment_path(comment.message, comment), class: "btn btn-warning btn-sm me-2" %>
+          <%= link_to 'Delete', message_comment_path(comment.message, comment), method: :delete, data: { confirm: "Are you sure you want to delete this comment?" }, class: "btn btn-danger btn-sm" %>
+        <% end %>
       </div>
     <% end %>
+
+    <p class="mt-2">
+      <%= pluralize(comment.likes.count, 'like') %>
+    </p>
   </div>
 </div>
